--- a/scripts/hello.html
+++ b/scripts/hello.html
@@ -10,7 +10,7 @@
     <script src="Primitive Data Types/boolean.js"></script>
     <script src="Primitive Data Types/string.js"></script>
     <script src="Primitive Data Types/numbers.js"></script>
-    <script src="comments.js"></script>
+    <script src="Comments/comments.js"></script>
     <script src="modalwindow.js"></script>
     <script src="operator.js"></script>
     <script src="typeconversition.js"></script>
